2009-06-07  Paul Smith  <psmith@gnu.org>

	* read.c (record_files): The second-expansion "f->updating" hack
	was not completely correct: if assumed that the target with
	commands always had prerequisites; if one didn't then the ordering
	was messed up.  Fixed for now to use f->updating to decide whether
	to preserve the last element in the deps list... but this whole
	area of constructing and reversing the deps list is too confusing
	and needs to be reworked.  Fixes Savannah bug #21198.

2009-06-06  Paul Smith  <psmith@gnu.org>

	* hash.c (hash_insert): Remove useless test for NULL.
	Fixes Savannah bug #21823.

	* make.h: Move SET_STACK_SIZE determination to make.h.
	* main.c (main): New global variable, STACK_LIMIT, holds the
	original stack limit when make was started.
	* job.c (start_job_command): Reset the stack limit, if we changed it.
	Fixes Savannah bug #22010.

	* remake.c (check_dep): Only set the target's state to not-started
	if it's not already running.  Found this while testing -j10 builds
	of glibc: various targets were being rebuilt multiple times.
	Fix from Knut St. Osmundsen; fixes a problem reported in Savannah
	bug #15919.

	* read.c (multi_glob): Don't pass GLOB_NOCHECK to glob(3); instead
	handle the GLOB_NOMATCH error.  This is to work around Sourceware.org
	Bugzilla bug 10246.

2009-06-04  Paul Smith  <psmith@gnu.org>

	* read.c (eval): Skip initial whitespace (ffeed, vtab, etc.)

	* maintMakefile: Modify access of config and gnulib Savannah
	modules to use GIT instead of CVS.

	* main.c (main): Initialize the LENGTH field in SHELL_VAR.
	Fixes Savannah bug #24655.

	* read.c (eval_buffer): Don't dereference reading_file if it's NULL;
	this can happen during some invocations of $(eval ...) for example.
	Fixes Savannah bug #24588.  Patch by Lars Jessen <ljessen@ljessen.dk>

2009-06-02  Paul Smith  <psmith@gnu.org>

	* configure.in: Check for fileno()
	* read.c (eval_makefile): If fileno() is available, set CLOSE_ON_EXEC